# joydb

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
dummy/: Cargo.toml  dummy.json
dummy/src/: main.rs
examples/csv_example/: Cargo.toml
examples/csv_example/src/: main.rs
examples/dummy/: Cargo.toml  dummy.json
examples/dummy/src/: main.rs
examples/json_partitioned_example/: Cargo.toml
examples/json_partitioned_example/src/: main.rs
examples/paritioned_db/: Cargo.toml
examples/paritioned_db/src/: main.rs
examples/ron_example/: .gitignore  Cargo.toml
examples/ron_example/src/: main.rs
examples/ron_partitioned_example/: Cargo.toml
examples/ron_partitioned_example/src/: main.rs
examples/todo_web_app/: Cargo.toml
examples/todo_web_app/src/: main.rs
joydb/: Cargo.toml
joydb/src/: db.rs  error.rs  lib.rs  model.rs  relation.rs  state.rs
joydb/src/adapters/: csv.rs  fs_utils.rs  json.rs  mod.rs  ron.rs
joydb_macros/: Cargo.toml
joydb_macros/src/: lib.rs  model.rs
src/: lib.rs  traits.rs
test_suite/: Cargo.toml
test_suite/src/: database.rs  helpers.rs  lib.rs
test_suite/tests/: operations.rs
toydb/: Cargo.toml
toydb-v2-pov/: Cargo.toml
toydb-v2-pov/src/: main.rs
toydb/src/: adapter.rs  adapters.rs  db.rs  error.rs  lib.rs  relation.rs  state.rs  storage.rs  storage_error.rs  traits.rs
toydb/src/adapters/: csv.rs  json.rs  mod.rs
toydb_macros/: Cargo.toml
toydb_macros/src/: lib.rs  model.rs
