[package]
name = "joydb"
version = "0.0.1"
edition = "2024"

description = "Naive embedded database for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
joydb_macros = { path = "../joydb_macros", version = "0.0.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
thiserror = "2.0"
csv = "1.3.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
