[package]
name = "joydb"
version = "0.0.1"
edition = "2024"
authors = ["Serhii Potapov <blake131313@gmail.com>"]

description = "An in-memory embedded database with persistence and multiple adapters (JSON, CSV, etc). Acts like a minimalistic ORM with zero setup. Simple, lightweight, and perfect for prototypes, small apps, or experiments."
keywords = ["database", "ORM", "JSON", "embedded", "file"]
categories = ["database-implementations", "database"]
license = "MIT"
repository = "https://github.com/greyblake/joydb"
homepage = "https://github.com/greyblake/joydb"
documentation = "https://docs.rs/joydb"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
joydb_macros = { path = "../joydb_macros", version = "0.0.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
thiserror = "2.0"
csv = "1.3.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
