[package]
name = "toydb"
version = "0.1.1"
edition = "2024"

description = "Naive embedded database for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toydb_macros = { path = "../toydb_macros", version = "0.1.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
thiserror = "2.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
