[package]
name = "todo_web_app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
joydb = { path = "../../joydb", features = ["json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
